fix: Align Field components

--- a/packages/@dcl/inspector/src/components/Block/Block.css
+++ b/packages/@dcl/inspector/src/components/Block/Block.css
@@ -30,6 +30,10 @@
   column-gap: 8px;
 }
 
+.Block .content:has(.Field + .Field) {
+  align-items: flex-end;
+}
+
 .Block .content:has(.Dropdown.Field) {
   flex-wrap: wrap;
   row-gap: 12px;
